<resources>
    <string name="app_name">Volume Profile Scheduler</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_text_box">Enter a title for this profile</string>
    <string name="pick_start_time">Choose a start time!</string>
    <string name="pick_end_time">Choose an end time!</string>
    <string name="pick_date">Choose a date!</string>

    <string name="set_ringer_silent">Set your ringer to silent!</string>
    <string name="set_ringer_vibrate">Set your ringer to vibrate!</string>
    <string name="set_ringer_normal">Set your ringer to normal!</string>

    <string name="set_new_profile">Create a new profile!</string>

    <string name="title_activity_new_profile">Create a new profile</string>

    <string-array name="ringer_states_array">
        <item>Silent</item>
        <item>Vibrate</item>
        <item>Normal</item>
    </string-array>
</resources>
