<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tx.hacktx.NewProfile">

    <EditText
        android:id="@+id/title_text_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/title_text_box"/>

    <Button
        android:id="@+id/pick_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_start_time"
        android:onClick="showStartTimePickerDialog"
        android:layout_below="@id/title_text_box"/>

    <Button
        android:id="@+id/pick_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_end_time"
        android:onClick="showEndTimePickerDialog"
        android:layout_below="@id/pick_start_time"/>

    <Button
        android:id="@+id/pick_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:onClick="showDatePickerDialog"
        android:layout_below="@id/pick_end_time"/>

    <Spinner
        android:id="@+id/ringer_state_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pick_date"/>

    <Button
        android:id="@+id/set_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_new_profile"
        android:onClick="setProfile"
        android:layout_below="@id/ringer_state_spinner"/>
</RelativeLayout>
